# ndk_rotate_triangle

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/myapplication/: MainActivity.kt  SurfaceFragment.kt  TriangleSurface.kt
app/src/main/res/layout/: fragment_view_pager_item.xml
gradle/wrapper/: gradle-wrapper.properties
triangle/: build.gradle
triangle/src/androidTest/java/com/example/triangle/: ExampleInstrumentedTest.kt
triangle/src/main/: AndroidManifest.xml
triangle/src/main/cpp/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  native-lib.cpp
triangle/src/main/cpp/nvg/: nanovg.c  nanovg_gl.h
triangle/src/main/java/com/example/triangle/: Triangle.kt
